namespace SimpleAssets.Common.Utils
{
    public static class AnimationID
    {
        public const string ATTACK = "Attack";
        public const string IDLE = "Idle";
        public const string CAST_SPELL = "Cast Spell";
        public const string DEATH = "Death";
        public const string HIT = "Hit";
        public const string WALK = "Walk";
        public const string RUN = "Run";

        public const string ATTACK_SPEED = "AttackSpeed";
        public const string RUN_SPEED = "RunSpeed";
        public const string WALK_SPEED = "WalkSpeed";
    }
}